# plataforma_ccr

./: 20240226_174942-plataformaccr_test-site_config_backup.json  README.md  backupdb.sql  pyproject.toml
.github/workflows/: ci.yml
plataforma_ccr/: hooks.py  modules.txt
plataforma_ccr/plataforma_ccr/doctype/categoria/: categoria.js  categoria.json  categoria.py  test_categoria.py
plataforma_ccr/plataforma_ccr/doctype/elemento/: elemento.js  elemento.json  elemento.py  test_elemento.py
plataforma_ccr/plataforma_ccr/doctype/incidencia/: incidencia.js  incidencia.json  incidencia.py  test_incidencia.py
plataforma_ccr/plataforma_ccr/doctype/incidencia1/: incidencia1.js  incidencia1.json  incidencia1.py  test_incidencia1.py
